--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Trash
+﻿# Trash
 logs/
 save/
 scripts/ASCompiler/
@@ -8,6 +8,8 @@ FOnlineServer.cfg
 pocket_GMs.txt
 *.log
 **/free_pids.txt
+*.i64
+*.i32
 
 # Compiled data
 scripts\*.fosb
@@ -28,5 +30,3 @@ WorldVersion
 /cache_fail
 *.i64
 *.i32
-*.cfg
-/buffer.txt
