[карта] Продолжение работ над картами: популяция мобов, спавны руд и т.д, также были добавлены новые локации

--- a/maps/Locations.cfg
+++ b/maps/Locations.cfg
@@ -1288,6 +1288,11 @@ size=24
 [Area 360]
 name=stop1_ruin1_0
 map_0=stop1_ruin1_0				3600
+map_1=pattern_blank				3601
+map_2=pattern_blank				3602
+map_3=pattern_blank				3603
+map_4=pattern_blank				3604
+map_5=pattern_blank				3605
 Visible=1
 auto_garbage=0
 entrance=$0 0
@@ -1296,6 +1301,11 @@ size=24
 [Area 361]
 name=stop1_ruin1_1
 map_0=stop1_ruin1_1				3610
+map_1=pattern_blank				3611
+map_2=pattern_blank				3612
+map_3=pattern_blank				3613
+map_4=pattern_blank				3614
+map_5=pattern_blank				3615
 Visible=1
 auto_garbage=0
 entrance=$0 0
@@ -1304,6 +1314,11 @@ size=24
 [Area 362]
 name=stop1_ruin1_2
 map_0=stop1_ruin1_2				3620
+map_1=pattern_blank				3621
+map_2=pattern_blank				3622
+map_3=pattern_blank				3623
+map_4=pattern_blank				3624
+map_5=pattern_blank				3625
 Visible=1
 auto_garbage=0
 entrance=$0 0
@@ -1312,6 +1327,11 @@ size=24
 [Area 363]
 name=stop1_ruin1_3
 map_0=stop1_ruin1_3				3630
+map_1=pattern_blank				3631
+map_2=pattern_blank				3632
+map_3=pattern_blank				3633
+map_4=pattern_blank				3634
+map_5=pattern_blank				3635
 Visible=1
 auto_garbage=0
 entrance=$0 0
@@ -1321,6 +1341,10 @@ size=24
 name=stop1_ruin2_1
 map_0=stop1_ruin2_1				3640
 map_1=stop1_ruin2_1dn			3641
+map_2=pattern_blank				3642
+map_3=pattern_blank				3643
+map_4=pattern_blank				3644
+map_5=pattern_blank				3645
 Visible=1
 auto_garbage=0
 entrance=$0 0
@@ -1329,6 +1353,11 @@ size=24
 [Area 365]
 name=stop1_ruin2_2
 map_0=stop1_ruin2_2				3650
+map_1=pattern_blank				3651
+map_2=pattern_blank				3652
+map_3=pattern_blank				3653
+map_4=pattern_blank				3654
+map_5=pattern_blank				3655
 Visible=1
 auto_garbage=0
 entrance=$0 0
@@ -1337,6 +1366,11 @@ size=24
 [Area 366]
 name=stop1_ruin2_3	
 map_0=stop1_ruin2_3				3660
+map_1=pattern_blank				3661
+map_2=pattern_blank				3662
+map_3=pattern_blank				3663
+map_4=pattern_blank				3664
+map_5=pattern_blank				3665
 Visible=1
 auto_garbage=0
 entrance=$0 0
@@ -1345,6 +1379,11 @@ size=24
 [Area 367]
 name=stop1_ruin3_1
 map_0=stop1_ruin3_1				3670
+map_1=pattern_blank				3671
+map_2=pattern_blank				3672
+map_3=pattern_blank				3673
+map_4=pattern_blank				3674
+map_5=pattern_blank				3675
 Visible=1
 auto_garbage=0
 entrance=$0 0
@@ -1353,6 +1392,11 @@ size=24
 [Area 368]
 name=stop1_ruin3_2
 map_0=stop1_ruin3_2				3680
+map_1=pattern_blank				3681
+map_2=pattern_blank				3682
+map_3=pattern_blank				3683
+map_4=pattern_blank				3684
+map_5=pattern_blank				3685
 Visible=1
 auto_garbage=0
 entrance=$0 0
@@ -1361,10 +1405,65 @@ size=24
 [Area 369]
 name=stop1_ruin3_3
 map_0=stop1_ruin3_3				3690
+map_1=pattern_blank				3691
+map_2=pattern_blank				3692
+map_3=pattern_blank				3693
+map_4=pattern_blank				3694
+map_5=pattern_blank				3695
+Visible=1
+auto_garbage=0
+entrance=$0 0
+size=24
+
+[Area 370] # проверено
+name=stop1_ruin4_2
+map_0=stop1_ruin4_2				3700
+map_1=stop1_ruin4_2_mine		3701
+map_2=pattern_blank				3702
+map_3=pattern_blank				3703
+map_4=pattern_blank				3704
+map_5=pattern_blank				3705
 Visible=1
 auto_garbage=0
 entrance=$0 0
 size=24
 
 
+[Area 371] # проверено
+name=stop1_ruin3_4
+map_0=stop1_ruin3_4	 	 		3710
+map_1=stop1_ruin3_4_mine		3711
+map_2=pattern_blank				3712
+map_3=pattern_blank				3713
+map_4=pattern_blank				3714
+map_5=pattern_blank				3715
+Visible=1
+auto_garbage=0
+entrance=$0 0
+size=24
 
+[Area 372] # проверено
+name=stop1_ruin2_4
+map_0=stop1_ruin2_4	 	 		3720
+map_1=pattern_blank		 		3721
+map_2=pattern_blank				3722
+map_3=pattern_blank				3723
+map_4=pattern_blank				3724
+map_5=pattern_blank				3725
+Visible=1
+auto_garbage=0
+entrance=$0 0
+size=24
+
+[Area 373] # проверено
+name=stop1_ruin1_4
+map_0=stop1_ruin1_4 	 		3730
+map_1=pattern_blank		 		3731
+map_2=pattern_blank				3732
+map_3=pattern_blank				3733
+map_4=pattern_blank				3734
+map_5=pattern_blank				3735
+Visible=1
+auto_garbage=0
+entrance=$0 0
+size=24
