[карта] Добавлена подземка Пирса (Бар) [карта] Немного перемаплен Пирс

--- a/maps/Locations.cfg
+++ b/maps/Locations.cfg
@@ -1327,7 +1327,7 @@ size=24
 [Area 363]
 name=stop1_ruin1_3
 map_0=stop1_ruin1_3				3630
-map_1=pattern_blank				3631
+map_1=stop1_ruin1_3_dn			3631
 map_2=pattern_blank				3632
 map_3=pattern_blank				3633
 map_4=pattern_blank				3634
